@@ -3,6 +3,9 @@ Changelog
 
 4.2-dev0 - (unreleased)
 ---------------------------
+* Feature: Added friendlycaptcha settings + verify to be used with redmine
+  helpdesk block
+  [iulianpetchesi refs #157143]
 
 4.1 - (2022-11-25)
 ---------------------------
